# predomicsapp-web

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.mjs
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  deps.py  errors.py  rate_limit.py  security.py
backend/app/models/: auth_schemas.py  db_models.py  schemas.py
backend/app/routers/: admin.py  analysis.py  auth.py  comments.py  dashboard.py  data_explore.py  datasets.py  export.py  health.py  meta_analysis.py  predict.py  projects.py  public.py  samples.py  sharing.py  templates.py  webhook_router.py  websocket.py
backend/app/services/: audit.py  backup.py  coabundance.py  data_analysis.py  email.py  engine.py  msp_annotations.py  pdf_report.py  prediction.py  scitq_client.py  sklearn_runner.py  stability.py  storage.py  taxonomy_colors.py  webhooks.py  worker.py
backend/tests/: test_api.py
data/datasets/a1b2c3d4e5f6/: 0bcd35cea195_Xtest.tsv  2f8bc3116ff9_Xtest.tsv  345751ad813a_Xtrain.tsv  4b698aff4e9b_Ytrain.tsv  c7419f976e8b_Xtest.tsv  e8d676636a8a_Ytest.tsv  ed115c326687_Ytrain.tsv
data/derosa2025_ici/: README.md  Xtrain.tsv
data/qin2014_cirrhosis/: README.md
data/sample/: Ytest.tsv  Ytrain.tsv  param.yaml
data/wetlab_protocol/: Ytest.tsv  metadata.tsv
docs/: capture_screenshots.mjs  codebase-documentation.html  parameter_analysis.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js  vitest.setup.js
frontend/src/: App.vue  main.js  router.js
frontend/src/__tests__/: components.test.js  notify.test.js  parameterDefs.test.js  router.test.js  stores.test.js
frontend/src/components/: CommentsSidebar.vue  ConsolePanel.vue  DatasetPreviewModal.vue  OnboardingTour.vue  (+7 more)
helm/predomicsapp/: Chart.yaml  values.yaml
nginx/: nginx.conf
scripts/: backup.sh  restore.sh  ssl-init.sh
tests/e2e/: e2e.spec.mjs
(+51 files in other folders)
