[project]
name = "predomicsapp-backend"
version = "0.1.0"
description = "FastAPI backend for PredomicsApp — web interface for gpredomics"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "slowapi>=0.1.9",
    "reportlab>=4.0",
]

[project.optional-dependencies]
email = ["aiosmtplib>=2.0"]
scitq = ["scitq>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "aiosqlite>=0.19",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
concurrency = ["greenlet", "thread"]
omit = ["app/main.py", "app/services/worker.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__"]
show_missing = true
